--- a/src/pages/VideoMeet/VideoMeet.module.css
+++ b/src/pages/VideoMeet/VideoMeet.module.css
@@ -390,7 +390,7 @@
 }
 
 /* 左侧 */
-.roomLeft{ }
+/* .roomLeft{ } */
 .roomTitle{ font-size:20px; font-weight:700; margin-bottom:16px; }
 
 .roomBlock{
